fixes header alignment

--- a/client/my-sites/plugins/plugin-details-CTA/style.scss
+++ b/client/my-sites/plugins/plugin-details-CTA/style.scss
@@ -23,7 +23,7 @@
 	font-family: $brand-serif;
 	font-size: $font-title-large;
 	color: var( --studio-gray-100 );
-	margin: 16px 0;
+	margin: 32px 0 16px;
 	min-height: 48px;
 	display: flex;
 	align-items: baseline;
